# diario_machadinhense

./: Cargo.toml  README.md
src/: main.rs
static/css/: styles.css
static/js/: main.js
templates/: base.hbs  category.hbs  index.hbs
templates/partials/: footer.hbs  header.hbs
