[package]
name = "diario_machadinhense"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# MANTENHA "dir_source", MAS REMOVA "template_inheritance"
handlebars = { version = "5.1.0", features = ["dir_source"] }